--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -2,27 +2,61 @@
 <nav class="navbar navbar-expand-lg bg-dark sticky-top" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">BesPoint</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/places">Places</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/places/create">New Place</a>
-        </li>
+        <% if(currentUser) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/places/create">New Place</a>
+          </li>
+          <% } %>
+      </ul>
+
+      <ul class="navbar-nav">
+        <% if(!currentUser){ %>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
+          <% }else{ %>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout"
+                onclick="event.preventDefault(); document.getElementById('form-logout').submit();">
+                logout
+              </a>
+              <form action="/logout" id="form-logout" method="post" style="display: none;"></form>
+            </li>
+            <li class="nav-item">
+              <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                    <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                      <li><a class="dropdown-item" href="#">
+                          <%= currentUser.username %>
+                        </a></li>
+                      <li><a class="dropdown-item" href="#">
+                          <%= currentUser.email %>
+                        </a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <% } %>
       </ul>
     </div>
   </div>
