--- a/views/places/showPlace.ejs
+++ b/views/places/showPlace.ejs
@@ -1,36 +1,174 @@
 <% layout('layouts/app') %>
-<div class="row mb-3">
-  <div class="col-6 offset-3">
-    <div class="card">
-      <img
-        src="<%= places.image %>"
-        alt="<%= places.title %>"
-        class="card-image-top" />
-      <div class="card-body">
-        <h5 class="card-title"><%= places.title %></h5>
-        <p class="card-text"><%= places.description %></p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"><%= places.location %></li>
-        <% if(places.price == 0){ %>
-        <li class="list-group-item">Gratis</li>
-        <% }else{ %>
-        <li class="list-group-item">Rp. <%= places.price %></li>
-        <% } %>
-      </ul>
-      <div class="card-body">
-        <a
-          href="/places/edit/<%= places._id %>"
-          class="btn btn-warning text-white card-link"
-          >Edit</a
-        >
-        <form
-          action="/places/deletePlace/<%= places._id %>?_method=DELETE"
-          method="post"
-          style="display: inline !important">
-          <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
+  <link rel="stylesheet" href="/css/stars.css">
+
+  <div class="row mb-3">
+    <div class="<%= currentUser ? 'col-6' : 'col-8 mx-auto'%>">
+      <div class="card">
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <% if (places.images.length) { %>
+            <% places.images.forEach((image, index)=> { %>
+              <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                <img src="/image/<%= image.filename %>" class="d-block w-100" alt="<%= places.title %>">
+              </div>
+              <% })%>
+            <% }else{ %>
+               <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                <img src="https://picsum.photos/1280/720?nature" class="d-block w-100" alt="<%= places.title %>">
+              </div>
+              <% } %>
+          </div>
+          <% if(places.images.length> 1) { %>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+            <% } %>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= places.title %>
+          </h5>
+          <p class="card-text">
+            <%= places.description %>
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <%= places.location %>
+          </li>
+          <li class="list-group-item">
+            Author: <%= places.author.username %>
+          </li>
+          <% if(places.price===0) { %>
+            <li class="list-group-item">Gratis</li>
+            <% } else { %>
+              <li class="list-group-item">Rp. <%= places.price %>
+              </li>
+              <% } %>
+        </ul>
+        <% if(currentUser && places.author.equals(currentUser._id)) { %>
+          <div class="card-body">
+            <a href="/places/edit/<%= places._id %>" class="btn btn-warning text-white card-link">Edit</a>
+            <form action="/places/delete/<%= places._id %>?_method=DELETE" method="post"
+              style="display: inline !important">
+              <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+          <% } %>
       </div>
     </div>
+
+    <div class="col-6">
+      <div class="mb-3" style="width: 640px; height: 480px" id="mapContainer"></div>
+      <% if(currentUser) { %>
+        <h3>Leave A Review</h3>
+        <form action="/places/<%= places._id %>/reviews" method="post" class="validate-form" novalidate>
+          <div class="mb-3">
+            <label for="" class="form-label">Rating</label>
+            <fieldset class="starability-coinFlip">
+              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked
+                aria-label="No rating." />
+              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+          </div>
+          <div class="mb-3">
+            <label for="" class="form-label">Review</label>
+            <textarea name="review[body]" class="form-control" id="" cols="30" rows="5" required></textarea>
+
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please fill out this field.</div>
+          </div>
+          <button type="submit" class="btn btn-success shadow mb-3">Submit</button>
+        </form>
+
+
+        <% for(const review of places.reviews) { %>
+          <div class="card mb-3">
+            <div class="card-body">
+              <h3>Rated element name</h3>
+              <p class="starability-result" data-rating="<%= review.rating %>"></p>
+              <p class="card-text">
+                <%= review.body %>
+              </p>
+              <p class="card-text">
+                Author: <%= review.author.username %>
+              </p>
+              <% if(currentUser && review.author._id.equals(currentUser._id)) { %>
+                <form action="/places/<%= places._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+                  <button class="btn btn-danger">Delete</button>
+                </form>
+                <% } %>
+            </div>
+          </div>
+          <% } %>
+            <% } %>
+    </div>
   </div>
-</div>
+  <script>
+    const place = <%- JSON.stringify(places) %>;
+    const placeLocation = { lng: place.geometry.coordinates[0], lat: place.geometry.coordinates[1] };
+  </script>
+
+<script>
+
+    function addMarker(group, coordinates, html) {
+      const svg = `<svg width="30px" height="30px" viewBox="0 0 24 24" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g transform="translate(0 -1028.4)"> <path d="m12 0c-4.4183 2.3685e-15 -8 3.5817-8 8 0 1.421 0.3816 2.75 1.0312 3.906 0.1079 0.192 0.221 0.381 0.3438 0.563l6.625 11.531 6.625-11.531c0.102-0.151 0.19-0.311 0.281-0.469l0.063-0.094c0.649-1.156 1.031-2.485 1.031-3.906 0-4.4183-3.582-8-8-8zm0 4c2.209 0 4 1.7909 4 4 0 2.209-1.791 4-4 4-2.2091 0-4-1.791-4-4 0-2.2091 1.7909-4 4-4z" transform="translate(0 1028.4)" fill="#e74c3c"></path> <path d="m12 3c-2.7614 0-5 2.2386-5 5 0 2.761 2.2386 5 5 5 2.761 0 5-2.239 5-5 0-2.7614-2.239-5-5-5zm0 2c1.657 0 3 1.3431 3 3s-1.343 3-3 3-3-1.3431-3-3 1.343-3 3-3z" transform="translate(0 1028.4)" fill="#c0392b"></path> </g> </g></svg>`
+
+      const icon = new H.map.Icon(svg);
+      const marker = new H.map.Marker(placeLocation, { icon: icon });
+      marker.setData(html);
+      group.addObject(marker);
+    }
+
+    function addInfoBubble(map) {
+      const group = new H.map.Group()
+
+      map.addObject(group);
+
+      group.addEventListener('tap', function(e) {
+        const bubble = new H.ui.InfoBubble(e.target.getGeometry(), {
+          content: e.target.getData()
+        })
+        ui.addBubble(bubble)
+      }, false)
+      addMarker(group, placeLocation, `<div>${place.title}</div>`)
+    }
+
+
+
+    const platform = new H.service.Platform({
+      'apikey': 'zqU7trO5aYKamgXsqm5sQkrNiEnUku6XlRYrbfkXBek'
+    });
+
+    const defaultLayers = platform.createDefaultLayers();
+
+    const map = new H.Map(
+      document.getElementById('mapContainer'),
+      defaultLayers.vector.normal.map,
+      {
+        zoom: 10,
+        center: placeLocation
+      });
+
+
+
+
+    const ui = H.ui.UI.createDefault(map, defaultLayers, 'en-US');
+    const behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
+
+    addInfoBubble(map);
+  </script>
