--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,67 @@
-<% layout('layouts/app') %>
-<h1>Base Point</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        <link rel="stylesheet" href="/css/home.css">
+    <title>BestPoint - Jelajahi Bagian dari Indonesia</title>
+</head>
+
+<body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a href="/" class="navbar-brand">BestPoint</a>
+                <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="/" class="nav-link">Home</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="navbar-nav">
+                    <a href="/places" class="nav-link">Jelajahi</a>
+                    <% if (currentUser){%>
+                        <a href="/logout" class="nav-link" onclick="
+                            event.preventDefault(); 
+                            document.getElementById('form-logout').submit();">
+                            Logout
+                        </a>
+                        <form action="/logout" id="form-logout" method="post" style="display: none;"></form>
+                        <% }else{ %>
+                            <a href="/login" class="nav-link">Login</a>
+                            <a href="/register" class="nav-link">Register</a>
+                            <% } %>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section class="hero-section">
+        <div class="container">
+            <h1>BestPoints</h1>
+            <h4 class="subtitle"> Discover the Best Points for your Perfect Vacation</h4>
+
+            <div class="mt-4 btn-group-center">
+                <a href="/places" class="btn btn-outline-light">Jelajahi</a>
+            </div>
+        </div> 
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
